set(UML2RSL_FILES 
    Association.class
    EquivalentTypes.class
    Operation.class
    Attribute.class
    EquivalentTypesTable.class
    Pair.class
    Clase.class
    FormalParameter.class
    RSLKeywordTable.class
    ClassDiagram.class
    Generalization.class
    RecAlias.class
    Dependency.class
    Instantiation.class
    UML2RSL.class
    End.class
    Multiplicity.class
    UML2RSL.java
)

INSTALL(FILES ${UML2RSL_FILES} DESTINATION UML2RSL)
